tests/valid/module/pub_items.facet
pub mod api {
  pub struct Token {
    value: unrestricted isize
  }

  pub enum Choice {
    Yes,
    No
  }

  pub trait Show;

  pub fn make() -> unrestricted Token {
    Token { value = 1 }
  }
}

fn main() -> unrestricted api::Token {
  (api::make)
}
