tests/invalid/enum/unknown_variant_constructor.facet
enum BoolLike {
  Yes
}

fn bad() -> unrestricted BoolLike {
  BoolLike::No()
}
